<resources>
    <!-- universal strings -->
    <string name="copenhagenbuzz">CopenhagenBuzz</string>

    <!-- nav_menu_bar strings -->
    <string name="nav_menu_fav">Favorites</string>
    <string name="nav_menu_cal">Calendar</string>
    <string name="nav_menu_time">Timeline</string>
    <string name="nav_menu_maps">Maps</string>


    <string name="event_type">Event Type</string>
    <string name="event_type_desc">Select the event type from the dropdown</string>

    <string-array name="event_types">
        <item>Concert</item>
        <item>Festival</item>
        <item>Conference</item>
        <item>Meetup</item>
        <item>Workshop</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- activity_main strings -->
    <string name="event_name">Event name</string>
    <string name="event_location">Event location</string>
    <string name="event_date">Event date</string>
    <string name="event_description">Event description</string>
    <string name="add_event">Add event</string>
    <string name="click_me">Click Me</string>
    <string name="info">Info</string>
    <string name="edit">edit</string>
    <string name="example_image">Example Image</string>
    <string name="timeline">Timeline</string>
    <string name="maps">Maps</string>
    <string name="enable_maps">Please enable Maps to view events</string>
    <string name="save_event">Save Event</string>
    <string name="favorites">Favorites</string>
    <string name="calendar">Calendar</string>
    <string name="save_event_for_later">Save event for later</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="click_to_enable_locations">Click to enable locations</string>
</resources>